--- a/nextflow.config
+++ b/nextflow.config
@@ -8,6 +8,9 @@
 
 // Global default params, used in configs
 params {
+    outDir = "${PWD}"     // Path to output directory, default PWD
+    genome = 'GRCh37'     // Default reference genome is GRCh38
+
 
     // TODO nf-core: Specify your pipeline's command line flags
     // Input options
@@ -16,25 +19,7 @@ params {
     genome                     = null
     igenomes_base              = 's3://ngi-igenomes/igenomes'
     igenomes_ignore            = false
-    
 
-    // MultiQC options
-    multiqc_config             = null
-    multiqc_title              = null
-    multiqc_logo               = null
-    max_multiqc_email_size     = '25.MB'
-    multiqc_methods_description = null
-
-    // Boilerplate options
-    outdir                     = null
-    publish_dir_mode           = 'copy'
-    email                      = null
-    email_on_fail              = null
-    plaintext_email            = false
-    monochrome_logs            = false
-    hook_url                   = null
-    help                       = false
-    version                    = false
 
     // Config options
     config_profile_name        = null
@@ -59,7 +44,86 @@ params {
     validate_params                  = true
 
 }
+profiles {
 
+    docker {
+        includeConfig "conf/docker.config"
+        includeConfig "conf/containers.config"
+        includeConfig "conf/resources.config"
+        includeConfig "conf/references.config"
+    }
+
+    singularity {
+        includeConfig "conf/singularity.config"
+        includeConfig "conf/containers.config"
+        includeConfig "conf/resources.config"
+        includeConfig "conf/references.config"
+    }
+
+    juno {
+        includeConfig "conf/singularity.config"
+        includeConfig "conf/juno.config"
+        includeConfig "conf/containers.config"
+        includeConfig "conf/references.config"
+
+        if(params.assayType == "exome") {
+            includeConfig "conf/exome.config"
+            includeConfig "conf/resources_juno.config"
+        }
+        if(params.assayType == "genome") {
+            includeConfig "conf/genome.config"
+            includeConfig "conf/resources_juno_genome.config"
+        }
+    }
+
+    awsbatch { 
+        includeConfig "conf/docker.config"
+        includeConfig "conf/containers.config"
+        includeConfig "conf/awsbatch.config"
+        includeConfig "conf/resources_aws.config"
+        includeConfig "conf/references.config"
+
+        if(params.assayType == "exome") {
+            includeConfig "conf/exome.config"
+            includeConfig "conf/resources_aws.config"
+        }
+        if(params.assayType == "genome") {
+            includeConfig "conf/genome.config"
+            includeConfig "conf/resources_aws_genome.config"
+        }
+    }
+
+    test_singularity {
+        includeConfig "conf/test.config"
+        includeConfig "conf/singularity.config"
+        includeConfig "conf/containers.config"
+        includeConfig "conf/resources.config"
+        includeConfig "conf/references.config"
+        if(params.assayType == "exome") {
+            includeConfig "conf/exome.config"
+        }
+        if(params.assayType == "genome") {
+            includeConfig "conf/genome.config"
+        }
+	executor.name = "lsf"
+	params.scatterCount = 3
+    }
+
+    test {
+        includeConfig "conf/test.config"
+        includeConfig "conf/docker.config"
+        includeConfig "conf/containers.config"
+        includeConfig "conf/resources.config"
+        includeConfig "conf/references.config"
+        if(params.assayType == "exome") {
+            includeConfig "conf/exome.config"
+        }
+        if(params.assayType == "genome") {
+            includeConfig "conf/genome.config"
+        }
+	params.scatterCount = 3
+    }
+}
 // Load base.config by default for all pipelines
 includeConfig 'conf/base.config'
 
@@ -86,7 +150,7 @@ profiles {
     conda {
         conda.enabled          = true
         docker.enabled         = false
-        singularity.enabled    = false
+        singularity.enabled    = true
         podman.enabled         = false
         shifter.enabled        = false
         charliecloud.enabled   = false
@@ -125,42 +189,7 @@ profiles {
         charliecloud.enabled   = false
         apptainer.enabled      = false
     }
-    podman {
-        podman.enabled         = true
-        conda.enabled          = false
-        docker.enabled         = false
-        singularity.enabled    = false
-        shifter.enabled        = false
-        charliecloud.enabled   = false
-        apptainer.enabled      = false
-    }
-    shifter {
-        shifter.enabled        = true
-        conda.enabled          = false
-        docker.enabled         = false
-        singularity.enabled    = false
-        podman.enabled         = false
-        charliecloud.enabled   = false
-        apptainer.enabled      = false
-    }
-    charliecloud {
-        charliecloud.enabled   = true
-        conda.enabled          = false
-        docker.enabled         = false
-        singularity.enabled    = false
-        podman.enabled         = false
-        shifter.enabled        = false
-        apptainer.enabled      = false
-    }
-    apptainer {
-        apptainer.enabled      = true
-        conda.enabled          = false
-        docker.enabled         = false
-        singularity.enabled    = false
-        podman.enabled         = false
-        shifter.enabled        = false
-        charliecloud.enabled   = false
-    }
+    
     gitpod {
         executor.name          = 'local'
         executor.cpus          = 16
