--- a/nextflow.config
+++ b/nextflow.config
@@ -1,49 +1,38 @@
-/*
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-    nf-core/vcftomafgnanno Nextflow config file
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-    Default config options for all compute environments
-----------------------------------------------------------------------------------------
-*/
-
-// Global default params, used in configs
-params {
-    outDir = "${PWD}"     // Path to output directory, default PWD
-    genome = 'GRCh37'     // Default reference genome is GRCh38
-
-
-    // TODO nf-core: Specify your pipeline's command line flags
-    // Input options
-    input                      = null
-    // References
-    genome                     = null
-    igenomes_base              = 's3://ngi-igenomes/igenomes'
-    igenomes_ignore            = false
-
-
-    // Config options
-    config_profile_name        = null
-    config_profile_description = null
-    custom_config_version      = 'master'
-    custom_config_base         = "https://raw.githubusercontent.com/nf-core/configs/${params.custom_config_version}"
-    config_profile_contact     = null
-    config_profile_url         = null
-    
-
-    // Max resource options
-    // Defaults only, expecting to be overwritten
-    max_memory                 = '128.GB'
-    max_cpus                   = 16
-    max_time                   = '240.h'
-
-    // Schema validation default options
-    validationFailUnrecognisedParams = false
-    validationLenientMode            = false
-    validationSchemaIgnoreParams     = 'genomes'
-    validationShowHiddenParams       = false
-    validate_params                  = true
-
+manifest {
+  description = 'WES & WGS pipeline'
+  mainScript = 'dsl2.nf'
+  nextflowVersion = '>=20.01.0'
+  version = '1.4.0'
 }
+
+params {
+  outDir = "./"     // Path to output directory, default PWD
+  genome = 'GRCh37'     // Default reference genome is GRCh38
+  // path to reference files subdirectory
+  verbose = false        // Enable for more verbose information, default false
+  markdup_java_options = '"-Xms4000m -Xmx7g"' // Established values for markDuplicate memory consumption
+  // see https://github.com/SciLifeLab/Sarek/blob/master/conf/base.config
+  publishDirMode = 'link' // publishDir mode is hard 'link' by default
+  assayType = "exome" // either 'exome' or 'genome'; default exome
+  somatic = false
+  germline = false
+  publishAll = true
+  mapping = false
+  pairing = false
+  bamMapping = false
+  splitLanes = false
+  QC = false
+  aggregate = false
+  fileTracking = 'fileTracking.tsv'
+  watch = false
+  touchInputsInterval = 30 // unit of minutes
+  chunkSizeLimit = 0 // set > 0 to tune number of lines read from mapping, bamMapping or aggregate
+  anonymizeFQ = false
+  cosmic = 'v3'
+  svcnv = 'hisens'
+}
+
+// Run profiles are specified with "-profile" at the command line
 profiles {
 
     docker {
@@ -65,234 +54,31 @@ profiles {
         includeConfig "conf/juno.config"
         includeConfig "conf/containers.config"
         includeConfig "conf/references.config"
-
-        if(params.assayType == "exome") {
-            includeConfig "conf/exome.config"
-            includeConfig "conf/resources_juno.config"
-        }
-        if(params.assayType == "genome") {
-            includeConfig "conf/genome.config"
-            includeConfig "conf/resources_juno_genome.config"
-        }
-    }
-
-    awsbatch { 
-        includeConfig "conf/docker.config"
-        includeConfig "conf/containers.config"
-        includeConfig "conf/awsbatch.config"
-        includeConfig "conf/resources_aws.config"
-        includeConfig "conf/references.config"
-
-        if(params.assayType == "exome") {
-            includeConfig "conf/exome.config"
-            includeConfig "conf/resources_aws.config"
-        }
-        if(params.assayType == "genome") {
-            includeConfig "conf/genome.config"
-            includeConfig "conf/resources_aws_genome.config"
-        }
-    }
-
-    test_singularity {
-        includeConfig "conf/test.config"
-        includeConfig "conf/singularity.config"
-        includeConfig "conf/containers.config"
         includeConfig "conf/resources.config"
-        includeConfig "conf/references.config"
-        if(params.assayType == "exome") {
-            includeConfig "conf/exome.config"
-        }
-        if(params.assayType == "genome") {
-            includeConfig "conf/genome.config"
-        }
-	executor.name = "lsf"
-	params.scatterCount = 3
-    }
-
-    test {
-        includeConfig "conf/test.config"
-        includeConfig "conf/docker.config"
-        includeConfig "conf/containers.config"
-        includeConfig "conf/resources.config"
-        includeConfig "conf/references.config"
-        if(params.assayType == "exome") {
-            includeConfig "conf/exome.config"
-        }
-        if(params.assayType == "genome") {
-            includeConfig "conf/genome.config"
-        }
-	params.scatterCount = 3
     }
 }
-// Load base.config by default for all pipelines
-includeConfig 'conf/base.config'
 
-// Load nf-core custom profiles from different Institutions
-try {
-    includeConfig "${params.custom_config_base}/nfcore_custom.config"
-} catch (Exception e) {
-    System.err.println("WARNING: Could not load nf-core/config profiles: ${params.custom_config_base}/nfcore_custom.config")
+trace {
+    enabled = false
+    file = 'trace.txt'
+    fields = 'task_id,hash,native_id,process,tag,name,status,exit,module,container,cpus,time,disk,memory,attempt,submit,start,complete,duration,realtime,queue,%cpu,%mem,rss,vmem,peak_rss,peak_vmem,rchar,wchar,syscr,syscw,read_bytes,write_bytes'
 }
 
-// Load nf-core/vcftomafgnanno custom profiles from different institutions.
-// Warning: Uncomment only if a pipeline-specific instititutional config already exists on nf-core/configs!
-// try {
-//   includeConfig "${params.custom_config_base}/pipeline/vcftomafgnanno.config"
-// } catch (Exception e) {
-//   System.err.println("WARNING: Could not load nf-core/config/vcftomafgnanno profiles: ${params.custom_config_base}/pipeline/vcftomafgnanno.config")
-// }
-profiles {
-    debug {
-        dumpHashes             = true
-        process.beforeScript   = 'echo $HOSTNAME'
-        cleanup                = false
-    }
-    conda {
-        conda.enabled          = true
-        docker.enabled         = false
-        singularity.enabled    = true
-        podman.enabled         = false
-        shifter.enabled        = false
-        charliecloud.enabled   = false
-        apptainer.enabled      = false
-    }
-    mamba {
-        conda.enabled          = true
-        conda.useMamba         = true
-        docker.enabled         = false
-        singularity.enabled    = false
-        podman.enabled         = false
-        shifter.enabled        = false
-        charliecloud.enabled   = false
-        apptainer.enabled      = false
-    }
-    docker {
-        docker.enabled         = true
-        docker.userEmulation   = true
-        conda.enabled          = false
-        singularity.enabled    = false
-        podman.enabled         = false
-        shifter.enabled        = false
-        charliecloud.enabled   = false
-        apptainer.enabled      = false
-    }
-    arm {
-        docker.runOptions = '-u $(id -u):$(id -g) --platform=linux/amd64'
-    }
-    singularity {
-        singularity.enabled    = true
-        singularity.autoMounts = true
-        conda.enabled          = false
-        docker.enabled         = false
-        podman.enabled         = false
-        shifter.enabled        = false
-        charliecloud.enabled   = false
-        apptainer.enabled      = false
-    }
-    
-    gitpod {
-        executor.name          = 'local'
-        executor.cpus          = 16
-        executor.memory        = 60.GB
-    }
-    test      { includeConfig 'conf/test.config'      }
-    test_full { includeConfig 'conf/test_full.config' }
-}
-
-// Set default registry for Apptainer, Docker, Podman and Singularity independent of -profile
-// Will not be used unless Apptainer / Docker / Podman / Singularity are enabled
-// Set to your registry if you have a mirror of containers
-apptainer.registry   = 'quay.io'
-docker.registry      = 'quay.io'
-podman.registry      = 'quay.io'
-singularity.registry = 'quay.io'
-
-// Nextflow plugins
-plugins {
-    id 'nf-validation' // Validation of pipeline parameters and creation of an input channel from a sample sheet
-}
-
-// Load igenomes.config if required
-if (!params.igenomes_ignore) {
-    includeConfig 'conf/igenomes.config'
-} else {
-    params.genomes = [:]
-}
-// Export these variables to prevent local Python/R libraries from conflicting with those in the container
-// The JULIA depot path has been adjusted to a fixed path `/usr/local/share/julia` that needs to be used for packages in the container.
-// See https://apeltzer.github.io/post/03-julia-lang-nextflow/ for details on that. Once we have a common agreement on where to keep Julia packages, this is adjustable.
-
-env {
-    PYTHONNOUSERSITE = 1
-    R_PROFILE_USER   = "/.Rprofile"
-    R_ENVIRON_USER   = "/.Renviron"
-    JULIA_DEPOT_PATH = "/usr/local/share/julia"
-}
-
-// Capture exit codes from upstream processes when piping
-process.shell = ['/bin/bash', '-euo', 'pipefail']
-
-def trace_timestamp = new java.util.Date().format( 'yyyy-MM-dd_HH-mm-ss')
 timeline {
     enabled = true
-    file    = "${params.outdir}/pipeline_info/execution_timeline_${trace_timestamp}.html"
+    file = 'timeline.html'
 }
+
 report {
     enabled = true
-    file    = "${params.outdir}/pipeline_info/execution_report_${trace_timestamp}.html"
+    file = 'report.html'
 }
-trace {
-    enabled = true
-    file    = "${params.outdir}/pipeline_info/execution_trace_${trace_timestamp}.txt"
-}
+
 dag {
-    enabled = true
-    file    = "${params.outdir}/pipeline_info/pipeline_dag_${trace_timestamp}.html"
+    enabled = false
+    file = 'dag.pdf'
 }
 
-manifest {
-    name            = 'nf-core/vcftomafgnanno'
-    author          = """John Orgera, Ramya Madupuri, Jason Hwee"""
-    homePage        = 'https://github.com/nf-core/vcftomafgnanno'
-    description     = """Changes a VCF to MAF and then annotates it using the new Genome Nexus Annotator"""
-    mainScript      = 'main.nf'
-    nextflowVersion = '!>=23.04.0'
-    version         = '1.0dev'
-    doi             = ''
-}
-
-// Load modules.config for DSL2 module specific options
-includeConfig 'conf/modules.config'
-
-// Function to ensure that resource requirements don't go beyond
-// a maximum limit
-def check_max(obj, type) {
-    if (type == 'memory') {
-        try {
-            if (obj.compareTo(params.max_memory as nextflow.util.MemoryUnit) == 1)
-                return params.max_memory as nextflow.util.MemoryUnit
-            else
-                return obj
-        } catch (all) {
-            println "   ### ERROR ###   Max memory '${params.max_memory}' is not valid! Using default value: $obj"
-            return obj
-        }
-    } else if (type == 'time') {
-        try {
-            if (obj.compareTo(params.max_time as nextflow.util.Duration) == 1)
-                return params.max_time as nextflow.util.Duration
-            else
-                return obj
-        } catch (all) {
-            println "   ### ERROR ###   Max time '${params.max_time}' is not valid! Using default value: $obj"
-            return obj
-        }
-    } else if (type == 'cpus') {
-        try {
-            return Math.min( obj, params.max_cpus as int )
-        } catch (all) {
-            println "   ### ERROR ###   Max cpus '${params.max_cpus}' is not valid! Using default value: $obj"
-            return obj
-        }
-    }
+env {
+  PYTHONNOUSERSITE = 1
 }
